// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Service Record Snapshot Tests > All Services Combined > all services combined should match snapshot 1`] = `
[
  {
    "ip": "10.10.0.1",
    "modifiers": [
      {
        "proxy": false,
      },
    ],
    "name": "router",
    "type": "A",
  },
  {
    "ip": "10.10.0.10",
    "modifiers": [
      {
        "proxy": false,
      },
    ],
    "name": "truenas",
    "type": "A",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "auth",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "vault",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "docker",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "ip": "20.64.176.83",
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "up",
    "type": "A",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "net",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "atuin",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "cloud",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "docs",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "code",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "*.code",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "mqtt",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "chat",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "ip": "10.11.2.123",
    "modifiers": [
      {
        "proxy": false,
      },
    ],
    "name": "kiwix",
    "type": "A",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "books",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "calibre",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "manga",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "stash",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "games",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "retro",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "code",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "*.code",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "garage",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "s3",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "*.s3",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "k2v",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "d",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "log",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "ingest.log",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "kasm",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "registry.kasm",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "registry",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "z",
    "target": "re4.re.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "*.z",
    "target": "re4.re.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "ai",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "ip": "10.10.1.20",
    "modifiers": [
      {
        "proxy": false,
      },
    ],
    "name": "traefik",
    "type": "A",
  },
  {
    "ip": "10.10.1.20",
    "modifiers": [
      {
        "proxy": false,
      },
    ],
    "name": "netbootxyz",
    "type": "A",
  },
  {
    "ip": "10.10.1.20",
    "modifiers": [
      {
        "proxy": false,
      },
    ],
    "name": "portainer",
    "type": "A",
  },
  {
    "ip": "10.10.1.20",
    "modifiers": [
      {
        "proxy": false,
      },
    ],
    "name": "pgadmin",
    "type": "A",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "media",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "request",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "invite",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "xteve",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "threadfin",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "tunarr",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "logos",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "guide",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "mirror",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "flows",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "metube",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "maintain",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "rec",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "sonarr",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "radarr",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "lidarr",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "readarr",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "prowlarr",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "sabnzbd",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "decryptarr",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "tautulli",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
]
`;

exports[`Service Record Snapshot Tests > All Services Combined > all services count should be consistent 1`] = `61`;

exports[`Service Record Snapshot Tests > Individual Service Records > custom CNAME service should match snapshot 1`] = `
[
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "test-cname",
    "target": "external.example.com.",
    "type": "CNAME",
  },
]
`;

exports[`Service Record Snapshot Tests > Individual Service Records > custom IP service should match snapshot 1`] = `
[
  {
    "ip": "10.0.0.100",
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "test-ip",
    "type": "A",
  },
]
`;

exports[`Service Record Snapshot Tests > Individual Service Records > direct routing service should match snapshot 1`] = `
[
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "test-direct",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
]
`;

exports[`Service Record Snapshot Tests > Individual Service Records > internal routing service should match snapshot 1`] = `
[
  {
    "ip": "10.10.1.20",
    "modifiers": [
      {
        "proxy": false,
      },
    ],
    "name": "test-internal",
    "type": "A",
  },
]
`;

exports[`Service Record Snapshot Tests > Individual Service Records > proxied routing service should match snapshot 1`] = `
[
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "test-proxied",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
]
`;

exports[`Service Record Snapshot Tests > Individual Service Records > tunnel routing service should match snapshot 1`] = `
[
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "test-tunnel",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
]
`;

exports[`Service Record Snapshot Tests > Service Category Records > gaming services should match snapshot 1`] = `
[
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "games",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "retro",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
]
`;

exports[`Service Record Snapshot Tests > Service Category Records > homelab services should match snapshot 1`] = `
[
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "code",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "*.code",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "garage",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "s3",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "*.s3",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "k2v",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "d",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "log",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "ingest.log",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "kasm",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "registry.kasm",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "registry",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "z",
    "target": "re4.re.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "*.z",
    "target": "re4.re.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "ai",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
]
`;

exports[`Service Record Snapshot Tests > Service Category Records > infrastructure services should match snapshot 1`] = `
[
  {
    "ip": "10.10.0.1",
    "modifiers": [
      {
        "proxy": false,
      },
    ],
    "name": "router",
    "type": "A",
  },
  {
    "ip": "10.10.0.10",
    "modifiers": [
      {
        "proxy": false,
      },
    ],
    "name": "truenas",
    "type": "A",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "auth",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "vault",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "docker",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "ip": "20.64.176.83",
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "up",
    "type": "A",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "net",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
]
`;

exports[`Service Record Snapshot Tests > Service Category Records > internal services should match snapshot 1`] = `
[
  {
    "ip": "10.10.1.20",
    "modifiers": [
      {
        "proxy": false,
      },
    ],
    "name": "traefik",
    "type": "A",
  },
  {
    "ip": "10.10.1.20",
    "modifiers": [
      {
        "proxy": false,
      },
    ],
    "name": "netbootxyz",
    "type": "A",
  },
  {
    "ip": "10.10.1.20",
    "modifiers": [
      {
        "proxy": false,
      },
    ],
    "name": "portainer",
    "type": "A",
  },
  {
    "ip": "10.10.1.20",
    "modifiers": [
      {
        "proxy": false,
      },
    ],
    "name": "pgadmin",
    "type": "A",
  },
]
`;

exports[`Service Record Snapshot Tests > Service Category Records > media services should match snapshot 1`] = `
[
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "books",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "calibre",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "manga",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "stash",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
]
`;

exports[`Service Record Snapshot Tests > Service Category Records > polaris video services should match snapshot 1`] = `
[
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "media",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "request",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "invite",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "xteve",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "threadfin",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "tunarr",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "logos",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "guide",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "mirror",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "flows",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "metube",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "maintain",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "rec",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "sonarr",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "radarr",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "lidarr",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "readarr",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "prowlarr",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "sabnzbd",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "decryptarr",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "tautulli",
    "target": "tun.qnc.plrs.im.",
    "type": "CNAME",
  },
]
`;

exports[`Service Record Snapshot Tests > Service Category Records > productivity services should match snapshot 1`] = `
[
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "atuin",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "cloud",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "docs",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "code",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "*.code",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "mqtt",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "modifiers": [
      {
        "proxy": true,
      },
    ],
    "name": "chat",
    "target": "gw.sea.plrs.im.",
    "type": "CNAME",
  },
  {
    "ip": "10.11.2.123",
    "modifiers": [
      {
        "proxy": false,
      },
    ],
    "name": "kiwix",
    "type": "A",
  },
]
`;
